k8s/app/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diaspomoney-service
  namespace: diaspomoney
spec:
  selector:
    app: diaspomoney
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: ClusterIP
